// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetPreview changes the colors of the description if it was generated 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keyphrase in desktop mode highlights a keyword in different morphological forms 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          She
          <strong>
             runs
          </strong>
           every day and every
          <strong>
             run
          </strong>
           is longer than the previous.
          <strong>
             Running
          </strong>
           makes her happy.
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keyphrase in desktop mode highlights keywords even if they are transliterated 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Something with a transliterated
          <strong>
             kaayword
          </strong>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keyphrase in desktop mode highlights keywords inside the description and url 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › this-keyword-url
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Something with a
          <strong>
             keyword
          </strong>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview highlights keyphrase in desktop mode highlights separate words from the keyphrase 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          She
          <strong>
             runs
          </strong>
          <strong>
             every
          </strong>
           day and
          <strong>
             every
          </strong>
          <strong>
             run
          </strong>
           is longer than the previous.
          <strong>
             Running
          </strong>
           makes her happy.
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview mobile mode renders an AMP logo when isAmp is true 1`] = `
<section>
  <div
    className="krNDeb"
    id="yoast-snippet-preview-container"
    width={null}
  >
    <div
      className="lhyxIP"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="bSIUsD"
      >
        <div
          className="dBEGxy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <img
            alt=""
            className="gVhfyt"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAABs0lEQVR4AWL4//8/RRjO8Iucx+noO0MWUDo16FYABMGP6ZfUcRnWtm27jVPbtm3bttuH2t3eFPcY9pLz7NxiLjCyVd87pKnHyqXyxtCs8APd0rnyxiu4qSeA3QEDrAwBDrT1s1Rc/OrjLZwqVmOSu6+Lamcpp2KKMA9PH1BYXMe1mUP5qotvXTywsOEEYHXxrY+3cqk6TMkYpNr2FeoY3KIr0RPtn9wQ2unlA+GMkRw6+9TFw4YTwDUzx/JVvARj9KaedXRO8P5B1Du2S32smzqUrcKGEyA+uAgQjKX7zf0boWHGfn71jIKj2689gxp7OAGShNcBUmLMPVjZuiKcA2vuWHHDCQxMCz629kXAIU4ApY15QwggAFbfOP9DhgBJ+nWVJ1AZAfICAj1pAlY6hCADZnveQf7bQIwzVONGJonhLIlS9gr5mFg44Xd+4S3XHoGNPdJl1INIwKyEgHckEhgTe1bGiFY9GSFBYUwLh1IkiJUbY407E7syBSFxKTszEoiE/YdrgCEayDmtaJwCI9uu8TKMuZSVfSa4BpGgzvomBR/INhLGzrqDotp01ZR8pn/1L0JN9d9XNyx0AAAAAElFTkSuQmCC"
          />
          <span
            className="gWbgoS"
          >
            <span
              className="jRNKJe"
            >
              example.org
            </span>
             › 
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="ckxtlX"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="hatpQR"
        >
          <span
            className="leIzFo"
          >
            Title
          </span>
        </div>
      </div>
      <div
        className="bVszZl"
      />
    </div>
    <div
      className="lhyxIP"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="hyTgmD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="hyTgmD"
        >
          
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview mobile mode renders differently than desktop 1`] = `
<section>
  <div
    className="krNDeb"
    id="yoast-snippet-preview-container"
    width={null}
  >
    <div
      className="lhyxIP"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="bSIUsD"
      >
        <div
          className="dBEGxy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <img
            alt=""
            className="gVhfyt"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAABs0lEQVR4AWL4//8/RRjO8Iucx+noO0MWUDo16FYABMGP6ZfUcRnWtm27jVPbtm3bttuH2t3eFPcY9pLz7NxiLjCyVd87pKnHyqXyxtCs8APd0rnyxiu4qSeA3QEDrAwBDrT1s1Rc/OrjLZwqVmOSu6+Lamcpp2KKMA9PH1BYXMe1mUP5qotvXTywsOEEYHXxrY+3cqk6TMkYpNr2FeoY3KIr0RPtn9wQ2unlA+GMkRw6+9TFw4YTwDUzx/JVvARj9KaedXRO8P5B1Du2S32smzqUrcKGEyA+uAgQjKX7zf0boWHGfn71jIKj2689gxp7OAGShNcBUmLMPVjZuiKcA2vuWHHDCQxMCz629kXAIU4ApY15QwggAFbfOP9DhgBJ+nWVJ1AZAfICAj1pAlY6hCADZnveQf7bQIwzVONGJonhLIlS9gr5mFg44Xd+4S3XHoGNPdJl1INIwKyEgHckEhgTe1bGiFY9GSFBYUwLh1IkiJUbY407E7syBSFxKTszEoiE/YdrgCEayDmtaJwCI9uu8TKMuZSVfSa4BpGgzvomBR/INhLGzrqDotp01ZR8pn/1L0JN9d9XNyx0AAAAAElFTkSuQmCC"
          />
          <span
            className="gWbgoS"
          >
            <span
              className="jRNKJe"
            >
              example.org
            </span>
             › 
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="ckxtlX"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="hatpQR"
        >
          <span
            className="leIzFo"
          >
            Title
          </span>
        </div>
      </div>
    </div>
    <div
      className="lhyxIP"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="hyTgmD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="hyTgmD"
        >
          
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a SnippetPreview in the default mode 1`] = `
<section>
  <div
    className="krNDeb"
    id="yoast-snippet-preview-container"
    width={null}
  >
    <div
      className="lhyxIP"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Url preview:
      </span>
      <div
        className="bSIUsD"
      >
        <div
          className="dBEGxy"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <img
            alt=""
            className="gVhfyt"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAABs0lEQVR4AWL4//8/RRjO8Iucx+noO0MWUDo16FYABMGP6ZfUcRnWtm27jVPbtm3bttuH2t3eFPcY9pLz7NxiLjCyVd87pKnHyqXyxtCs8APd0rnyxiu4qSeA3QEDrAwBDrT1s1Rc/OrjLZwqVmOSu6+Lamcpp2KKMA9PH1BYXMe1mUP5qotvXTywsOEEYHXxrY+3cqk6TMkYpNr2FeoY3KIr0RPtn9wQ2unlA+GMkRw6+9TFw4YTwDUzx/JVvARj9KaedXRO8P5B1Du2S32smzqUrcKGEyA+uAgQjKX7zf0boWHGfn71jIKj2689gxp7OAGShNcBUmLMPVjZuiKcA2vuWHHDCQxMCz629kXAIU4ApY15QwggAFbfOP9DhgBJ+nWVJ1AZAfICAj1pAlY6hCADZnveQf7bQIwzVONGJonhLIlS9gr5mFg44Xd+4S3XHoGNPdJl1INIwKyEgHckEhgTe1bGiFY9GSFBYUwLh1IkiJUbY407E7syBSFxKTszEoiE/YdrgCEayDmtaJwCI9uu8TKMuZSVfSa4BpGgzvomBR/INhLGzrqDotp01ZR8pn/1L0JN9d9XNyx0AAAAAElFTkSuQmCC"
          />
          <span
            className="gWbgoS"
          >
            <span
              className="jRNKJe"
            >
              example.org
            </span>
             › 
          </span>
        </div>
      </div>
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        SEO title preview:
      </span>
      <div
        className="ckxtlX"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="hatpQR"
        >
          <span
            className="leIzFo"
          >
            Title
          </span>
        </div>
      </div>
    </div>
    <div
      className="lhyxIP"
    >
      <span
        className="screen-reader-text"
        style={
          Object {
            "clip": "rect(1px, 1px, 1px, 1px)",
            "height": "1px",
            "overflow": "hidden",
            "position": "absolute",
            "width": "1px",
          }
        }
      >
        Meta description preview:
      </span>
      <div
        className="hyTgmD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <div
          className="hyTgmD"
        >
          
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a SnippetPreview that looks like Google 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="gaQSsS"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 2`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="gRUvbW"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on activation 3`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="frRUdu"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="kBtXJS"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 2`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="jCJZuF"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview renders a caret on hover 3`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="fPJWFd"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`SnippetPreview shows the date if a date is passed 1`] = `
<section>
  <div
    className="ezFBTJ cKqjpT"
    id="yoast-snippet-preview-container"
  >
    <div
      className="cWSSoB"
    >
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Url preview:
        </span>
        <div
          className="bSIUsD"
        >
          <div
            className="bwzKuY"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
          >
            <span
              className="lbSDYy"
            >
              <span
                className="jRNKJe"
              >
                example.org
              </span>
               › 
            </span>
          </div>
        </div>
        <div
          className="fhJVHD"
        />
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          SEO title preview:
        </span>
        <div
          className="ckxtlX"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <div
            className="cwNKEP"
          >
            <span
              className="iuJlYc"
            >
              Title
            </span>
          </div>
        </div>
      </div>
      <div
        className="hOjANn"
      >
        <span
          className="screen-reader-text"
          style={
            Object {
              "clip": "rect(1px, 1px, 1px, 1px)",
              "height": "1px",
              "overflow": "hidden",
              "position": "absolute",
              "width": "1px",
            }
          }
        >
          Meta description preview:
        </span>
        <div
          className="eAfwAY"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <span
            className="deWjxp"
          >
            Today
             
            -
             
          </span>
          Description
        </div>
      </div>
    </div>
  </div>
</section>
`;
